kubernetes-volumes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-volumes-service
  namespace: homework
spec:
  selector:
    app.kubernetes.io/name: kubernetes-volumes
    app.kubernetes.io/instance: kubernetes-volumes-instance
  ports:
    - name: http-k8s-vol-s
      protocol: TCP
      port: 80
      targetPort: http-k8s-vol
  type: ClusterIP
