kubernetes-volumes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-volumes-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kubernetes-volumes-service
            port:
              name: http-k8s-vol-s
      - path: /homework(/.*)(/|$)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kubernetes-volumes-service
            port:
              name: http-k8s-vol-s
